--- a/client/client/src/js/components/header/index.less
+++ b/client/client/src/js/components/header/index.less
@@ -1,6 +1,8 @@
 @import "../../../vendor/bower_components/AdminLTE/dist/css/skins/_all-skins.css";
 
 .main-header {
+  width: 100%;
+  position: fixed;
   > .navbar {
     margin-left: 0;
   }
