--- a/client/client/src/style/common.less
+++ b/client/client/src/style/common.less
@@ -2,4 +2,5 @@
 @import "../vendor/bower_components/font-awesome/css/font-awesome.css";
 @import "../vendor/bower_components/Ionicons/css/ionicons.css";
 @import "../vendor/bower_components/AdminLTE/dist/css/AdminLTE.css";
-// @import "../vendor/bower_components/animate.css/animate.css";
+@import "../vendor/bower_components/animate.css/animate.css";
+@import "../vendor/bower_components/iconfont/iconfont.css";
