增加任务单项操作，完善功能

--- a/client/client/src/js/components/left-label/index.less
+++ b/client/client/src/js/components/left-label/index.less
@@ -3,7 +3,7 @@
   text-align: left;
   padding: 25px 15px;
   cursor: pointer;
-  .icon-zengjia {
+  .icon-iconfontadd {
     padding-right: 10px;
   }
   &:hover {
