--- a/client/client/src/js/components/box-list-item/index.less
+++ b/client/client/src/js/components/box-list-item/index.less
@@ -1,9 +1,15 @@
 @import "../../../vendor/plugins/iCheck/flat/blue.css";
 
 .list-item {
+  position: relative;
   background-color: #fff;
   &:hover {
     background-color: #f5f5f5;
+    .mailbox-operation {
+      >span {
+        opacity: 1;
+      }
+    }
   }
   &:nth-of-type(odd) {
     background-color: #f9f9f9;
@@ -27,10 +33,7 @@
     width: 20%;
   }
   .mailbox-subject {
-    width: 60%;
-  }
-  .mailbox-operation {
-    width: 10%;
+    width: 70%;
   }
 }
 .task-view {
@@ -40,7 +43,8 @@
   left: 0;
   width: 100%;
   background: #fff;
-  box-shadow: 1px 1px 10px black;
+  box-shadow: 0 0 10px 1px #333;
+  margin: 5px 0 0 0;
   .task {
     padding: 5px 15px;
   }
@@ -68,8 +72,16 @@
   }
 }
 .task-title {
+  position: relative;
   cursor: pointer;
   padding: 16px 20px;
   outline: 1px solid transparent;
   font-size: 16px;
+  border-bottom: 1px solid #ddd;
+  margin: 0 -15px;
+  .mailbox-operation {
+    >span {
+      opacity: 1;
+    }
+  }
 }
