--- a/client/client/src/js/components/task-detail/index.less
+++ b/client/client/src/js/components/task-detail/index.less
@@ -92,5 +92,48 @@
       height: 25px;
       color: #c7c7c7;
     }
+    .avatar {
+      width: 24px;
+      height: 24px;
+      margin-right: 10px;
+    }
+    .more-selector {
+      display: inline-block;
+      position: relative;
+      top: 8px;
+      width: 400px;
+      position: relative;
+      .rct-grid {
+        width: 100%;
+        background: transparent;
+        border: none;
+        box-shadow: none;
+        padding: 0;
+      }
+    }
+    .involve-members {
+      padding: 0;
+      margin-bottom: 0;
+      >li {
+        position: relative;
+        float: left;
+        list-style: none;
+      }
+      .add-involvement-handler {
+        display: block;
+        font-size: 24px;
+        color: #a6a6a6;
+      }
+      .icon-iconfontadd {
+        border-radius: 50%;
+        color: #fff;
+        background: #03a9f4;
+        display: block;
+        width: 24px;
+        height: 24px;
+        line-height: 24px;
+        text-align: center;
+      }
+    }
   }
 }
