--- a/client/client/src/js/layout/panel/index.less
+++ b/client/client/src/js/layout/panel/index.less
@@ -7,3 +7,28 @@
 .col-md-9 {
   margin-left: 25%;
 }
+
+.skin-blue {
+  .main-header {
+    .navbar-static-top.navbar {
+      background-color: #4285f4;
+    }
+  }
+}
+.skin-orange {
+  .main-header {
+    .navbar-static-top.navbar {
+      background-color: #ef6c00;
+    }
+  }
+  .sidebar-toggle {
+    color: #fff;
+  }
+}
+.skin-green {
+  .main-header {
+    .navbar-static-top.navbar {
+      background-color: #0f9d58;
+    }
+  }
+}
