增加任务列表无结果页面

--- a/client/client/src/js/layout/panel/index.less
+++ b/client/client/src/js/layout/panel/index.less
@@ -32,3 +32,13 @@
     }
   }
 }
+.skin-grey {
+  .main-header {
+    .navbar-static-top.navbar {
+      background-color: #898984;
+    }
+  }
+  .sidebar-toggle {
+    color: #fff;
+  }
+}
