--- a/client/client/src/js/components/header/index.less
+++ b/client/client/src/js/components/header/index.less
@@ -6,4 +6,13 @@
   > .navbar {
     margin-left: 0;
   }
+  .navbar-title {
+    float: left;
+    background-color: transparent;
+    background-image: none;
+    padding: 15px 15px;
+    font-family: fontAwesome;
+    color: #fff;
+    font-size: 14px;
+  }
 }
