--- a/client/client/src/js/components/box-list-item/index.less
+++ b/client/client/src/js/components/box-list-item/index.less
@@ -59,6 +59,7 @@
 }
 .task-view {
   position: relative;
+  display: none;
   z-index: 100;
   top: 0;
   left: 0;
@@ -66,6 +67,9 @@
   background: #fff;
   box-shadow: 0 0 10px 1px #333;
   margin: 5px 0 0 0;
+  &.active {
+    display: block;
+  }
   .task {
     padding: 5px 15px;
   }
