--- a/client/client/src/js/components/login/index.less
+++ b/client/client/src/js/components/login/index.less
@@ -4,3 +4,24 @@
 body {
   background: #d2d6de !important;
 }
+.login-box {
+  .icheck {
+    input {
+      position: absolute;
+      top: -20%;
+      left: -20%;
+      display: block;
+      width: 140%;
+      height: 140%;
+      margin: 0px;
+      padding: 0px;
+      background: rgb(255, 255, 255);
+      border: 0px;
+      opacity: 0;
+    }
+    .icheckbox_square-blue {
+      position: relative;
+      margin-right: 10px;
+    }
+  }
+}
