--- a/client/app/template/layout.html
+++ b/client/app/template/layout.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" href="/base.css" />
   </head>
   <body>
     <%- body %>
+    <script type="text/javascript" src="/base.dll.js"></script>
     <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
