--- a/client/client/src/js/components/task-detail/index.less
+++ b/client/client/src/js/components/task-detail/index.less
@@ -62,6 +62,9 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       color: #282828;
+      >span {
+        font-weight: bold;
+      }
       .date-text {
         font-size: 16.5px;
         cursor: pointer;
@@ -103,6 +106,12 @@
       top: 8px;
       width: 400px;
       position: relative;
+      >span {
+        float: left;
+        height: 24px;
+        line-height: 24px;
+        font-weight: bold;
+      }
       .rct-grid {
         width: 100%;
         background: transparent;
