--- a/client/client/src/js/components/task-new/index.less
+++ b/client/client/src/js/components/task-new/index.less
@@ -2,6 +2,7 @@
   position: fixed;
   right: 20px;
   bottom: 20px;
+  z-index: 100;
   .task-new-icon {
     position: relative;
     height: 56px;
