--- a/client/client/src/js/layout/panel/index.less
+++ b/client/client/src/js/layout/panel/index.less
@@ -1,3 +1,6 @@
+body {
+  background-color: #fff !important;
+}
 .content {
   padding-top: 60px;
 }
@@ -41,4 +44,8 @@
   .sidebar-toggle {
     color: #fff;
   }
+}
+
+.content-wrapper, .right-side {
+  background-color: f2f2f2;
 }
